// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly when authenticated 1`] = `
<header>
  <h1
    className="page-header"
  >
    lets eat!
  </h1>
  <nav>
    <Link
      to="/recipe"
    >
      recipes
    </Link>
    |
    <Link
      to="/about"
    >
      about
    </Link>
    |
    <Link
      to="/login"
    >
      log 
      out
    </Link>
  </nav>
</header>
`;

exports[`Header renders correctly while loading 1`] = `
<header>
  <h1
    className="page-header"
  >
    lets eat!
  </h1>
  <nav>
    <Link
      to="/recipe"
    >
      recipes
    </Link>
    |
    <Link
      to="/about"
    >
      about
    </Link>
    |
    <Link
      to="/login"
    >
      log 
      in
    </Link>
    <LoadingDots
      dots={10}
      interval={200}
    />
  </nav>
</header>
`;

exports[`Header renders correctly without loading 1`] = `
<header>
  <h1
    className="page-header"
  >
    lets eat!
  </h1>
  <nav>
    <Link
      to="/recipe"
    >
      recipes
    </Link>
    |
    <Link
      to="/about"
    >
      about
    </Link>
    |
    <Link
      to="/login"
    >
      log 
      in
    </Link>
  </nav>
</header>
`;
